# transformer-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
examples/: embedding_example.rs  training_example.rs
src/: attention.rs  config.rs  decoder.rs  embedding.rs  encoder.rs  feed_forward.rs  lib.rs  main.rs  model.rs  train.rs  utils.rs
src/model/: attention.rs  config.rs  decoder.rs  embedding.rs  encoder.rs  mod.rs  model.rs  transformer.rs  utils.rs
src/training/: mod.rs  train.rs
