[package]
name = "transformer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = "0.9.1"
candle-nn = "0.9.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
